build_log3.txt

> Task :compileJava FAILED
D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java:239: error: cannot find symbol
        history.setSearchTime(LocalDateTime.now());
                              ^
  symbol:   variable LocalDateTime
  location: class SummonerService
Note: D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

[Incubating] Problems report is available at: file:///D:/toyproject/LolMMR-main/LolMMR-main/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java uses unchecked or unsafe operations.
  D:\toyproject\LolMMR-main\LolMMR-main\src\main\java\com\example\mmrtest\service\SummonerService.java:239: error: cannot find symbol
          history.setSearchTime(LocalDateTime.now());
                                ^
    symbol:   variable LocalDateTime
    location: class SummonerService
  Note: Recompile with -Xlint:unchecked for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 1s
1 actionable task: 1 executed
